k8s/grafana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
        - name: grafana
          image: grafana/grafana:10.4.0
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: "256Mi"
              cpu: "200m"
            requests:
              memory: "128Mi"
              cpu: "50m"
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30300
  selector:
    app: grafana

# Deployment = HR Manager

# Service = Reception Desk

# HR manager ensures employees exist.

# Reception desk ensures customers can reach employees.

# Both are required.
# ---------------------------
# Deployment

# Handles:

# Pod creation
# Pod restart
# Scaling
# Rolling updates

# ----------------------------

# Service

# Handles:

# Networking
# Stable DNS
# Load balancing
# Pod discovery
